# lwnf-starter

backend/: .dockerignore  .env.developement  .env.example  .gitignore  LICENSE  README.md  email-debug.txt  pyproject.toml  test_celery.py
backend/apps/debug/: tasks.py
backend/apps/users/: apps.py  choices.py  constants.py  exceptions.py  models.py  typing.py
backend/apps/users/admin/: address.py  group.py  profile.py  user.py
backend/apps/users/api/: urls.py
backend/apps/users/common/: exceptions.py
backend/apps/users/exceptions/: __init__.py  account.py  authentication.py  permission.py  registration.py  user.py
backend/apps/users/migrations/: 0001_initial.py  0002_address_profile.py  0003_profile_nationality_emailverificationtoken_and_more.py  0004_emailchangetoken.py  0005_user_deleted_at.py
backend/apps/users/models/: __init__.py  address.py  managers.py  profile.py  user.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  dev.py  env.py  prod.py
backend/core/api/: __init__.py  base.py  exceptions.py  responses.py  schemas.py  throttles.py
backend/core/exceptions/: __init__.py  base.py
backend/core/security/: tokens.py
backend/core/storage/: backends.py  images.py
backend/core/validators/: password.py
backend/templates/emails/: base.html  base.txt  donation_confirmation.html  donation_confirmation.txt  email_change.html  email_change.txt  password_reset.html  password_reset.txt  sponsorship_confirmation.html  sponsorship_confirmation.txt  verification.html  verification.txt  welcome.html  welcome.txt
(+118 files in other folders)
