[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.38",
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-countries>=9.0.0",
    "django-environ>=0.14.0",
    "django-filter>=25.2",
    "django-phonenumber-field>=8.4.0",
    "django-redis>=7.0.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-standardized-errors>=0.16.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "orjson>=3.11.9",
    "phonenumbers>=9.0.33",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4,<8",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "factory-boy>=3.3.3",
    "faker>=40.27.0",
    "ipython>=9.15.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.20",
]
